{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 1,
  "lineage": "f831c6b1-2530-2fa2-2d03-24050b123594",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-11",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkInterfaces/client-vm-westeu116_z1",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.20.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001/subnets/snet-vm"
              }
            ],
            "location": "westeurope",
            "mac_address": "60-45-BD-97-23-58",
            "name": "client-vm-westeu116_z1",
            "private_ip_address": "10.20.0.4",
            "private_ip_addresses": [
              "10.20.0.4"
            ],
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/RG-HUB-SPOKE/providers/Microsoft.Compute/virtualMachines/client-vm-westeu"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkInterfaces/pe-sql-nic",
            "internal_domain_name_suffix": "5udblyfntu1efdlo2u34q2vpgb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "privateEndpointIpConfig.fa803a40-8fbd-4673-9f43-b84aea118ddd",
                "primary": true,
                "private_ip_address": "10.5.0.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/snet-hub"
              }
            ],
            "location": "westeurope",
            "name": "pe-sql-nic",
            "private_ip_address": "10.5.0.5",
            "private_ip_addresses": [
              "10.5.0.5"
            ],
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkInterfaces/client-vm-spoke-northeu33_z1",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.10.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001/subnets/snet-vm"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-0D-3A-B5-99-5E",
            "name": "client-vm-spoke-northeu33_z1",
            "private_ip_address": "10.10.0.4",
            "private_ip_addresses": [
              "10.10.0.4"
            ],
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/RG-HUB-SPOKE/providers/Microsoft.Compute/virtualMachines/client-vm-spoke-northeu"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkInterfaces/client-vm-spoke-northeu33_z1|/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-spoke-northeu-nsg",
            "network_interface_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkInterfaces/client-vm-spoke-northeu33_z1",
            "network_security_group_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-spoke-northeu-nsg",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkInterfaces/client-vm-westeu116_z1|/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-westeu-nsg",
            "network_interface_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkInterfaces/client-vm-westeu116_z1",
            "network_security_group_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-westeu-nsg",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-14",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-spoke-northeu-nsg",
            "location": "northeurope",
            "name": "client-vm-spoke-northeu-nsg",
            "resource_group_name": "rg-hub-spoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowTagSSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-16",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-westeu-nsg",
            "location": "westeurope",
            "name": "client-vm-westeu-nsg",
            "resource_group_name": "rg-hub-spoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowTagSSHInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-18",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "location": "westeurope",
            "name": "vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "resource_group_name": "rg-hub-spoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureCloud",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAzureCloudOutbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "3389"
                ],
                "direction": "Outbound",
                "name": "AllowSshRdpOutbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow GatewayManager",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManager",
                "priority": 2702,
                "protocol": "*",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow HTTPs",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHttpsInBound",
                "priority": 2703,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-25",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-snet-hub-nsg-westeurope",
            "location": "westeurope",
            "name": "vnet-hub-001-snet-hub-nsg-westeurope",
            "resource_group_name": "rg-hub-spoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-28",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-northeu-001-snet-vm-nsg-northeurope",
            "location": "northeurope",
            "name": "vnet-spoke-northeu-001-snet-vm-nsg-northeurope",
            "resource_group_name": "rg-hub-spoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowTagSSHInbound",
                "priority": 2711,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-32",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-westeu-001-snet-vm-nsg-westeurope",
            "location": "westeurope",
            "name": "vnet-spoke-westeu-001-snet-vm-nsg-westeurope",
            "resource_group_name": "rg-hub-spoke",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowTagSSHInbound",
                "priority": 2711,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-15",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-spoke-northeu-nsg/securityRules/AllowTagSSHInbound",
            "name": "AllowTagSSHInbound",
            "network_security_group_name": "client-vm-spoke-northeu-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-17",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/client-vm-westeu-nsg/securityRules/AllowTagSSHInbound",
            "name": "AllowTagSSHInbound",
            "network_security_group_name": "client-vm-westeu-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-19",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureCloud",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope/securityRules/AllowAzureCloudOutbound",
            "name": "AllowAzureCloudOutbound",
            "network_security_group_name": "vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-20",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow GatewayManager",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope/securityRules/AllowGatewayManager",
            "name": "AllowGatewayManager",
            "network_security_group_name": "vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "priority": 2702,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "GatewayManager",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow HTTPs",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope/securityRules/AllowHttpsInBound",
            "name": "AllowHttpsInBound",
            "network_security_group_name": "vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "priority": 2703,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-23",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-24",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "3389"
            ],
            "direction": "Outbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope/securityRules/AllowSshRdpOutbound",
            "name": "AllowSshRdpOutbound",
            "network_security_group_name": "vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-26",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-snet-hub-nsg-westeurope/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "vnet-hub-001-snet-hub-nsg-westeurope",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-27",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-snet-hub-nsg-westeurope/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "vnet-hub-001-snet-hub-nsg-westeurope",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-29",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-northeu-001-snet-vm-nsg-northeurope/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "vnet-spoke-northeu-001-snet-vm-nsg-northeurope",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-30",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-northeu-001-snet-vm-nsg-northeurope/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "vnet-spoke-northeu-001-snet-vm-nsg-northeurope",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-31",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-northeu-001-snet-vm-nsg-northeurope/securityRules/AllowTagSSHInbound",
            "name": "AllowTagSSHInbound",
            "network_security_group_name": "vnet-spoke-northeu-001-snet-vm-nsg-northeurope",
            "priority": 2711,
            "protocol": "Tcp",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-33",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-westeu-001-snet-vm-nsg-westeurope/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "vnet-spoke-westeu-001-snet-vm-nsg-westeurope",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-34",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-westeu-001-snet-vm-nsg-westeurope/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "vnet-spoke-westeu-001-snet-vm-nsg-westeurope",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-35",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-westeu-001-snet-vm-nsg-westeurope/securityRules/AllowTagSSHInbound",
            "name": "AllowTagSSHInbound",
            "network_security_group_name": "vnet-spoke-westeu-001-snet-vm-nsg-westeurope",
            "priority": 2711,
            "protocol": "Tcp",
            "resource_group_name": "rg-hub-spoke",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-43",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/publicIPAddresses/vnet-hub-001-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.16.56.178",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vnet-hub-001-ip",
            "resource_group_name": "rg-hub-spoke",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-45",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.0.128/26"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "virtual_network_name": "vnet-hub-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-47",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.0.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/snet-hub",
            "name": "snet-hub",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-spoke",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "timeouts": {
            },
            "virtual_network_name": "vnet-hub-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-52",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001/subnets/snet-vm",
            "name": "snet-vm",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "virtual_network_name": "vnet-spoke-northeu-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-56",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.0.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001/subnets/snet-vm",
            "name": "snet-vm",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "virtual_network_name": "vnet-spoke-westeu-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-46",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/AzureBastionSubnet",
            "network_security_group_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope",
            "subnet_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/AzureBastionSubnet",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-48",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/snet-hub",
            "network_security_group_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-snet-hub-nsg-westeurope",
            "subnet_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/snet-hub",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-53",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001/subnets/snet-vm",
            "network_security_group_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-northeu-001-snet-vm-nsg-northeurope",
            "subnet_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001/subnets/snet-vm",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-57",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001/subnets/snet-vm",
            "network_security_group_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-westeu-001-snet-vm-nsg-westeurope",
            "subnet_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001/subnets/snet-vm",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-44",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.5.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e01506fd-9dad-4236-8d6e-e53be872af31",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001",
            "location": "westeurope",
            "name": "vnet-hub-001",
            "resource_group_name": "rg-hub-spoke",
            "subnet": [
              {
                "address_prefix": "10.5.0.0/25",
                "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/snet-hub",
                "name": "snet-hub",
                "security_group": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-snet-hub-nsg-westeurope"
              },
              {
                "address_prefix": "10.5.0.128/26",
                "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "security_group": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-hub-001-AzureBastionSubnet-nsg-westeurope"
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-51",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "29e84335-c1d5-4da1-b0ee-7135198d2fe6",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001",
            "location": "northeurope",
            "name": "vnet-spoke-northeu-001",
            "resource_group_name": "rg-hub-spoke",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/25",
                "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001/subnets/snet-vm",
                "name": "snet-vm",
                "security_group": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-northeu-001-snet-vm-nsg-northeurope"
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-55",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "af0e9561-13ff-46a9-88e9-b0a0b439edb9",
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001",
            "location": "westeurope",
            "name": "vnet-spoke-westeu-001",
            "resource_group_name": "rg-hub-spoke",
            "subnet": [
              {
                "address_prefix": "10.20.0.0/25",
                "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001/subnets/snet-vm",
                "name": "snet-vm",
                "security_group": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/networkSecurityGroups/vnet-spoke-westeu-001-snet-vm-nsg-westeurope"
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "res-49",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/virtualNetworkPeerings/spoke-northeu",
            "name": "spoke-northeu",
            "remote_virtual_network_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001",
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "res-50",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001/virtualNetworkPeerings/spoke-westeu",
            "name": "spoke-westeu",
            "remote_virtual_network_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001",
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-hub-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "res-54",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-northeu-001/virtualNetworkPeerings/hub",
            "name": "hub",
            "remote_virtual_network_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001",
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-northeu-001"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "res-58",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-spoke-westeu-001/virtualNetworkPeerings/hub",
            "name": "hub",
            "remote_virtual_network_id": "/subscriptions/08af9d7a-c4a4-4858-827f-2a27ef8b6245/resourceGroups/rg-hub-spoke/providers/Microsoft.Network/virtualNetworks/vnet-hub-001",
            "resource_group_name": "rg-hub-spoke",
            "timeouts": {
            },
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-spoke-westeu-001"
          }
        }
      ]
    }
  ]
}